create VMAccess in NativeImageGeneratorRunner and use it to plant providers and lookup types